--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cz-conventional-changelog": "^2.1.0"
+    "cz-conventional-changelog": "^2.1.0",
+    "dayjs": "^1.7.7",
+    "knex": "^0.15.2",
+    "mysql": "^2.16.0"
   },
   "config": {
     "commitizen": {
@@ -18,6 +21,7 @@
     }
   },
   "dependencies": {
+    "commander": "^2.19.0",
     "puppeteer": "^1.9.0",
     "qs": "^6.5.2"
   }
